# ais-decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ais_decoder/: CMakeLists.txt  ais_decoder.cpp  ais_decoder.h  ais_file.cpp  ais_file.h  ais_quick.cpp  ais_quick.h  ais_utils.cpp  ais_utils.h  default_sentence_parser.cpp  default_sentence_parser.h  strutils.h
examples/: utils.h
examples/file_reader/: CMakeLists.txt  file_reader.cpp
examples/file_reader_mt/: CMakeLists.txt  file_reader_mt.cpp
examples/nmea2nmea/: CMakeLists.txt  nmea2nmea.cpp
examples/quick/: CMakeLists.txt  quick.cpp
examples/type123_meta/: CMakeLists.txt  type123_meta.cpp
python/: README.md  ais_decoder.i  setup.py  setup_old.py  test.py
python_docker/: docker-compose.yaml
python_docker/ais_testing/: Dockerfile  requirements.txt
python_docker/ais_testing/code/: ais_helper.py  config.cfg  jobs.py  main.py
